added get_beams_parameters.  Might change it to have two arguments, file and fwhm

--- a/examples/example.cfg
+++ b/examples/example.cfg
@@ -25,14 +25,21 @@ output_folder        = ./output ; Output folder
 flux_densities_filename = simstack_flux_densities ; Will be saved as [output_folder]/[flux_densities_filename].dat
 boot_fluxes_filename    = simstack_bootstrap_flux_densities  ; Will be saved as [output_folder]/[boot_fluxes_filename].npy
 
+[catalogs]
+; 
+#path_catalog = /data/maps_cats_models/catalogs/UVISTA/DR2/
+#file_catalog = UVISTA_DR2_master_v2.1_USE.csv
+path_catalog = /data/maps_cats_models/catalogs/UVISTA/
+file_catalog = COSMOS2015_Laigle+_v1.1.csv
+
 [maps_to_stack]
 ; True/False represents whether to stack them
 mips_24    =   24.0 False 
 pacs_green =  100.0 False 
 pacs_red   =  160.0 False 
 spire_PSW  =  250.0 True
-spire_PSM  =  350.0 True
-spire_PSL  =  500.0 True
+spire_PMW  =  350.0 True
+spire_PLW  =  500.0 True
 scuba_450  =  450.0 False
 scuba_850  =  850.0 True
 aztec      = 1100.0 False 
@@ -43,8 +50,8 @@ mips_24 = /Users/marco/Code/Python/Modules/simstack/data/cutouts/
 pacs_green = /Users/marco/Code/Python/Modules/simstack/data/cutouts/
 pacs_red = /Users/marco/Code/Python/Modules/simstack/data/cutouts/
 spire_PSW = /Users/marco/Code/Python/Modules/simstack/data/cutouts/
-spire_PSM = /Users/marco/Code/Python/Modules/simstack/data/cutouts/
-spire_PSL = /Users/marco/Code/Python/Modules/simstack/data/cutouts/
+spire_PMW = /Users/marco/Code/Python/Modules/simstack/data/cutouts/
+spire_PLW = /Users/marco/Code/Python/Modules/simstack/data/cutouts/
 scuba_450 = /Users/marco/Code/Python/Modules/simstack/data/cutouts/
 scuba_850 = /Users/marco/Code/Python/Modules/simstack/data/cutouts/
 aztec = /Users/marco/Code/Python/Modules/simstack/data/cutouts/
@@ -55,8 +62,8 @@ mips_24    = mips_24_GO3_sci_10.cutout.fits
 pacs_green = pep_COSMOS_green_Map.DR1.sci.cutout.fits 
 pacs_red   = pep_COSMOS_red_Map.DR1.sci.cutout.fits
 spire_PSW  = cosmos-uvista-hipe12_itermap_10_iterations_5.0_arcsec_pixels_PSW.signal.cutout.fits
-spire_PSM  = cosmos-uvista-hipe12_itermap_10_iterations_5.0_arcsec_pixels_PMW.signal.cutout.fits 
-spire_PSL  = cosmos-uvista-hipe12_itermap_10_iterations_5.0_arcsec_pixels_PLW.signal.cutout.fits
+spire_PMW  = cosmos-uvista-hipe12_itermap_10_iterations_5.0_arcsec_pixels_PMW.signal.cutout.fits 
+spire_PLW  = cosmos-uvista-hipe12_itermap_10_iterations_5.0_arcsec_pixels_PLW.signal.cutout.fits
 scuba_450  = map450_new_header.cutout.fits 
 scuba_850  = map850_new_header.cutout.fits  
 aztec      = cosmos_jcmt_kscott20100925_map.cutout.fits 
@@ -67,8 +74,8 @@ mips_24    = mips_24_GO3_unc_10.cutout.fits
 pacs_green = pep_COSMOS_green_Map.DR1.err.cutout.fits
 pacs_red   = pep_COSMOS_red_Map.DR1.err.cutout.fits
 spire_PSW  = cosmos-uvista-hipe12_itermap_10_iterations_5.0_arcsec_pixels_PSW.noise.cutout.fits
-spire_PSM  = cosmos-uvista-hipe12_itermap_10_iterations_5.0_arcsec_pixels_PMW.noise.cutout.fits 
-spire_PSL  = cosmos-uvista-hipe12_itermap_10_iterations_5.0_arcsec_pixels_PLW.noise.cutout.fits
+spire_PMW  = cosmos-uvista-hipe12_itermap_10_iterations_5.0_arcsec_pixels_PMW.noise.cutout.fits 
+spire_PLW  = cosmos-uvista-hipe12_itermap_10_iterations_5.0_arcsec_pixels_PLW.noise.cutout.fits
 scuba_450  = map450_new_header_rms.cutout.fits
 scuba_850  = map850_new_header_rms.cutout.fits
 aztec      = cosmos_jcmt_kscott20100925_noise.cutout.fits 
@@ -79,8 +86,8 @@ mips_24    = 6.32
 pacs_green = 6.7 
 pacs_red   = 11.2
 spire_PSW  = 17.6 
-spire_PSM  = 23.9
-spire_PSL  = 35.2
+spire_PMW  = 23.9
+spire_PLW  = 35.2
 scuba_450  = 7.8
 scuba_850  = 14.5
 aztec      = 18.0
@@ -91,15 +98,9 @@ mips_24    = 1.25
 pacs_green = 23.58
 pacs_red   = 23.82
 spire_PSW  = 1.018
-spire_PSM  = 0.9914
-spire_PSL  = 0.95615
+spire_PMW  = 0.9914
+spire_PLW  = 0.95615
 scuba_450  = 1e-3
 scuba_850  = 1e-3
 aztec      = 1.0 
 
-[catalogs]
-; 
-#path_catalog = /data/maps_cats_models/catalogs/UVISTA/DR2/
-#file_catalog = UVISTA_DR2_master_v2.1_USE.csv
-path_catalog = /data/maps_cats_models/catalogs/UVISTA/
-file_catalog = COSMOS2015_Laigle+_v1.1.csv
