Up and running!

--- a/examples/example.cfg
+++ b/examples/example.cfg
@@ -7,11 +7,7 @@
 [general]
 ;populations chooses how the catalog is split into groups with like-properties
 populations     = sf-qt
-bootstrap       = True
-boots           = 10
-optimal_binning = True
-bin_lookbackt   = False
-all_z_at_once   = True 
+bootstrap       = True 0 10 ; True/False, initial number, number of iterations
 
 [cosmology] ; Cosmology - Planck15 
 omega_m = 0.3075
@@ -29,8 +25,17 @@ boot_fluxes_filename    = simstack_bootstrap_flux_densities  ; Will be saved as 
 ; 
 #path_catalog = /data/maps_cats_models/catalogs/UVISTA/DR2/
 #file_catalog = UVISTA_DR2_master_v2.1_USE.csv
-path_catalog = /data/maps_cats_models/catalogs/UVISTA/
-file_catalog = COSMOS2015_Laigle+_v1.1.csv
+catalog_path = /data/maps_cats_models/catalogs/UVISTA/
+catalog_file = COSMOS2015_Laigle+_v1.1.csv
+
+[binning]
+optimal_binning = False ;5    ; True/False, (optional number of bins)
+bin_in_lookbackt= False
+all_z_at_once   = True 
+redshift_minmax = False
+mass_minmax     = False
+redshift_nodes  = 0.5 1.0 1.5
+mass_nodes      = 9.0 9.5 10.0 10.5 11.0 12.0
 
 [maps_to_stack]
 ; True/False represents whether to stack them
@@ -46,15 +51,15 @@ aztec      = 1100.0 False
 
 [map_path]
 
-mips_24 = /Users/marco/Code/Python/Modules/simstack/data/cutouts/ 
-pacs_green = /Users/marco/Code/Python/Modules/simstack/data/cutouts/
-pacs_red = /Users/marco/Code/Python/Modules/simstack/data/cutouts/
-spire_PSW = /Users/marco/Code/Python/Modules/simstack/data/cutouts/
-spire_PMW = /Users/marco/Code/Python/Modules/simstack/data/cutouts/
-spire_PLW = /Users/marco/Code/Python/Modules/simstack/data/cutouts/
-scuba_450 = /Users/marco/Code/Python/Modules/simstack/data/cutouts/
-scuba_850 = /Users/marco/Code/Python/Modules/simstack/data/cutouts/
-aztec = /Users/marco/Code/Python/Modules/simstack/data/cutouts/
+mips_24 = /data/simstack/data/cutouts/ 
+pacs_green = /data/simstack/data/cutouts/ 
+pacs_red = /data/simstack/data/cutouts/ 
+spire_PSW = /data/simstack/data/cutouts/ 
+spire_PMW = /data/simstack/data/cutouts/ 
+spire_PLW = /data/simstack/data/cutouts/ 
+scuba_450 = /data/simstack/data/cutouts/ 
+scuba_850 = /data/simstack/data/cutouts/ 
+aztec = /data/simstack/data/cutouts/ 
 
 [map_file]
 ; Not sure how to make pixel size easy to change
@@ -81,16 +86,17 @@ scuba_850  = map850_new_header_rms.cutout.fits
 aztec      = cosmos_jcmt_kscott20100925_noise.cutout.fits 
 
 [beams]
-; PSF file path+names, or effective FWHM 
-mips_24    = 6.32
-pacs_green = 6.7 
-pacs_red   = 11.2
-spire_PSW  = 17.6 
-spire_PMW  = 23.9
-spire_PLW  = 35.2
-scuba_450  = 7.8
-scuba_850  = 14.5
-aztec      = 18.0
+;1- PSF file path+names, or effective FWHM 
+;2- Beam area in sr 
+mips_24    = 6.32 1.55e-09
+pacs_green = 6.7 1.0
+pacs_red   = 11.2 1.0
+spire_PSW  = 17.6 1.0
+spire_PMW  = 23.9 1.0
+spire_PLW  = 35.2 1.0
+scuba_450  = 7.8 1.0
+scuba_850  = 14.5 1.0
+aztec      = 18.0 1.0
 
 [color_correction]
 ; See Viero et al. 2013 for explaination
