--- a/examples/example.cfg
+++ b/examples/example.cfg
@@ -7,7 +7,7 @@
 [general]
 ;populations chooses how the catalog is split into groups with like-properties
 populations     = sf-qt
-bootstrap       = True 0 10 ; True/False, initial number, number of iterations
+bootstrap       = True 0 2 ; True/False, initial number, number of iterations
 
 [cosmology] ; Cosmology - Planck15 
 omega_m = 0.3075
@@ -17,9 +17,11 @@ h       = 0.6774
 
 [io] ; Input/output
 
-output_folder        = ./output ; Output folder
+output_folder           = ./output ; Output folder
+output_bootstrap_folder = ./output/bootstrap_fluxes/ ; Output folder
 flux_densities_filename = simstack_flux_densities ; Will be saved as [output_folder]/[flux_densities_filename].dat
-boot_fluxes_filename    = simstack_bootstrap_flux_densities  ; Will be saved as [output_folder]/[boot_fluxes_filename].npy
+#boot_fluxes_filename    = simstack_bootstrap_flux_densities  ; Will be saved as [output_folder]/[boot_fluxes_filename].npy
+shortname               = uVista_Laigle_3color_tests
 
 [catalogs]
 ; 
@@ -43,10 +45,10 @@ mips_24    =   24.0 False
 pacs_green =  100.0 False 
 pacs_red   =  160.0 False 
 spire_PSW  =  250.0 True
-spire_PMW  =  350.0 True
-spire_PLW  =  500.0 True
+spire_PMW  =  350.0 False
+spire_PLW  =  500.0 False
 scuba_450  =  450.0 False
-scuba_850  =  850.0 True
+scuba_850  =  850.0 False
 aztec      = 1100.0 False 
 
 [map_path]
@@ -66,9 +68,9 @@ aztec = /data/simstack/data/cutouts/
 mips_24    = mips_24_GO3_sci_10.cutout.fits  
 pacs_green = pep_COSMOS_green_Map.DR1.sci.cutout.fits 
 pacs_red   = pep_COSMOS_red_Map.DR1.sci.cutout.fits
-spire_PSW  = cosmos-uvista-hipe12_itermap_10_iterations_5.0_arcsec_pixels_PSW.signal.cutout.fits
-spire_PMW  = cosmos-uvista-hipe12_itermap_10_iterations_5.0_arcsec_pixels_PMW.signal.cutout.fits 
-spire_PLW  = cosmos-uvista-hipe12_itermap_10_iterations_5.0_arcsec_pixels_PLW.signal.cutout.fits
+spire_PSW  = cosmos-uvista-hipe12_itermap_10_iterations_6.0_arcsec_pixels_PSW.signal.cutout.fits
+spire_PMW  = cosmos-uvista-hipe12_itermap_10_iterations_6.0_arcsec_pixels_PMW.signal.cutout.fits 
+spire_PLW  = cosmos-uvista-hipe12_itermap_10_iterations_6.0_arcsec_pixels_PLW.signal.cutout.fits
 scuba_450  = map450_new_header.cutout.fits 
 scuba_850  = map850_new_header.cutout.fits  
 aztec      = cosmos_jcmt_kscott20100925_map.cutout.fits 
@@ -78,9 +80,9 @@ aztec      = cosmos_jcmt_kscott20100925_map.cutout.fits
 mips_24    = mips_24_GO3_unc_10.cutout.fits 
 pacs_green = pep_COSMOS_green_Map.DR1.err.cutout.fits
 pacs_red   = pep_COSMOS_red_Map.DR1.err.cutout.fits
-spire_PSW  = cosmos-uvista-hipe12_itermap_10_iterations_5.0_arcsec_pixels_PSW.noise.cutout.fits
-spire_PMW  = cosmos-uvista-hipe12_itermap_10_iterations_5.0_arcsec_pixels_PMW.noise.cutout.fits 
-spire_PLW  = cosmos-uvista-hipe12_itermap_10_iterations_5.0_arcsec_pixels_PLW.noise.cutout.fits
+spire_PSW  = cosmos-uvista-hipe12_itermap_10_iterations_6.0_arcsec_pixels_PSW.noise.cutout.fits
+spire_PMW  = cosmos-uvista-hipe12_itermap_10_iterations_6.0_arcsec_pixels_PMW.noise.cutout.fits 
+spire_PLW  = cosmos-uvista-hipe12_itermap_10_iterations_6.0_arcsec_pixels_PLW.noise.cutout.fits
 scuba_450  = map450_new_header_rms.cutout.fits
 scuba_850  = map850_new_header_rms.cutout.fits
 aztec      = cosmos_jcmt_kscott20100925_noise.cutout.fits 
