Added flexibility to use DR2 uVista Catalog as well as Laigle

--- a/examples/example.cfg
+++ b/examples/example.cfg
@@ -25,10 +25,10 @@ shortname               = uVista_Laigle_3color_tests
 
 [catalogs]
 ; 
-#path_catalog = /data/maps_cats_models/catalogs/UVISTA/DR2/
-#file_catalog = UVISTA_DR2_master_v2.1_USE.csv
-catalog_path = /data/maps_cats_models/catalogs/UVISTA/
-catalog_file = COSMOS2015_Laigle+_v1.1.csv
+catalog_path = /data/maps_cats_models/catalogs/UVISTA/DR2/
+catalog_file = UVISTA_DR2_master_v2.1_USE.csv
+#catalog_path = /data/maps_cats_models/catalogs/UVISTA/
+#catalog_file = COSMOS2015_Laigle+_v1.1.csv
 
 [binning]
 optimal_binning = False ;5    ; True/False, (optional number of bins)
