added example notebook (I removed a bunch by mistake!)

--- a/examples/example.cfg
+++ b/examples/example.cfg
@@ -6,6 +6,7 @@
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [general]
 ;populations chooses how the catalog is split into groups with like-properties
+;Start with star-forming/quiescent (sf-qt)
 populations     = sf-qt
 bootstrap       = False 0 2 ; True/False, initial number, number of iterations
 
@@ -21,14 +22,15 @@ output_folder           = ./output ; Output folder
 output_bootstrap_folder = ./output/bootstrap_fluxes/ ; Output folder for bootstraps
 flux_densities_filename = simstack_flux_densities ; Will be saved as [output_folder]/[flux_densities_filename].dat
 #boot_fluxes_filename    = simstack_bootstrap_flux_densities  ; Will be saved as [output_folder]/[boot_fluxes_filename].npy
+#shortname               = uVista_DR2_3color_tests
 shortname               = uVista_Laigle_3color_tests
 
 [catalogs]
 ; 
-catalog_path = /data/maps_cats_models/catalogs/UVISTA/DR2/
-catalog_file = UVISTA_DR2_master_v2.1_USE.csv
-#catalog_path = /data/maps_cats_models/catalogs/UVISTA/
-#catalog_file = COSMOS2015_Laigle+_v1.1.csv
+#catalog_path = /data/maps_cats_models/catalogs/UVISTA/DR2/
+#catalog_file = UVISTA_DR2_master_v2.1_USE.csv
+catalog_path = /data/maps_cats_models/catalogs/UVISTA/
+catalog_file = COSMOS2015_Laigle+_v1.1.csv
 
 [binning]
 optimal_binning = False ;5    ; True/False, (optional number of bins)
