--- a/examples/example.cfg
+++ b/examples/example.cfg
@@ -91,7 +91,7 @@ aztec      = cosmos_jcmt_kscott20100925_noise.cutout.fits
 
 [beams]
 ;1- PSF file path+names, or effective FWHM 
-;2- Beam area in sr 
+;2- Beam area in sr.  Should be 1.0 if maps are in Jy/beam, otherwise actual effective area if Jy/sr 
 mips_24    = 6.32 1.55e-09
 pacs_green = 6.7 1.0
 pacs_red   = 11.2 1.0
