moving binning to bincatalogs.py

--- a/examples/example.cfg
+++ b/examples/example.cfg
@@ -1,16 +1,23 @@
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-; Example parameter file for simstack code 
+; Example parameter file for simstack code
 ; Each line should have at most one parameter name and value
-; 
+;
 ; Contact: Marco Viero (marco.viero@stanford.edu)
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [general]
 ;populations chooses how the catalog is split into groups with like-properties
-;Start with star-forming/quiescent (sf-qt)
-populations     = sf-qt
 bootstrap       = False 0 2 ; True/False, initial number, number of iterations
 
-[cosmology] ; Cosmology - Planck15 
+[populations]
+;Name_of_sub-population = index, [conditions]
+;Here conditions are: feature, greater than, less than, equal to
+;False when one of those does not apply
+sf      = 1
+qt      = 0
+agn     = 2 F_ratio 40      False
+sb      = 3 lage    False   7.5
+
+[cosmology] ; Cosmology - Planck15
 omega_m = 0.3075
 omega_l = 0.6910
 omega_k = 0.
@@ -27,7 +34,7 @@ flux_densities_filename = simstack_flux_densities ; Will be saved as [output_fol
 shortname               = uVista_Laigle_1color_z_slices_tests
 
 [catalogs]
-; 
+;
 #catalog_path = /data/maps_cats_models/catalogs/UVISTA/DR2/
 #catalog_file = UVISTA_DR2_master_v2.1_USE.csv
 catalog_path = /data/maps_cats_models/catalogs/UVISTA/
@@ -36,7 +43,7 @@ catalog_file = COSMOS2015_Laigle+_v1.1.csv
 [binning]
 optimal_binning = False ;5    ; True/False, (optional number of bins)
 bin_in_lookbackt= False
-all_z_at_once   = False 
+all_z_at_once   = False
 redshift_minmax = False
 mass_minmax     = False
 redshift_nodes  = 0.5 1.0 1.5
@@ -44,54 +51,54 @@ mass_nodes      = 9.0 9.5 10.0 10.5 11.0 12.0
 
 [maps_to_stack]
 ; True/False represents whether to stack them
-mips_24    =   24.0 False 
-pacs_green =  100.0 False 
-pacs_red   =  160.0 False 
+mips_24    =   24.0 False
+pacs_green =  100.0 False
+pacs_red   =  160.0 False
 spire_PSW  =  250.0 True
 spire_PMW  =  350.0 False
 spire_PLW  =  500.0 False
 scuba_450  =  450.0 False
 scuba_850  =  850.0 False
-aztec      = 1100.0 False 
+aztec      = 1100.0 False
 
 [map_path]
 
-mips_24 = /data/simstack/data/cutouts/ 
-pacs_green = /data/simstack/data/cutouts/ 
-pacs_red = /data/simstack/data/cutouts/ 
-spire_PSW = /data/simstack/data/cutouts/ 
-spire_PMW = /data/simstack/data/cutouts/ 
-spire_PLW = /data/simstack/data/cutouts/ 
-scuba_450 = /data/simstack/data/cutouts/ 
-scuba_850 = /data/simstack/data/cutouts/ 
-aztec = /data/simstack/data/cutouts/ 
+mips_24 = /data/simstack/data/cutouts/
+pacs_green = /data/simstack/data/cutouts/
+pacs_red = /data/simstack/data/cutouts/
+spire_PSW = /data/simstack/data/cutouts/
+spire_PMW = /data/simstack/data/cutouts/
+spire_PLW = /data/simstack/data/cutouts/
+scuba_450 = /data/simstack/data/cutouts/
+scuba_850 = /data/simstack/data/cutouts/
+aztec = /data/simstack/data/cutouts/
 
 [map_file]
-mips_24    = mips_24_GO3_sci_10.cutout.fits  
-pacs_green = pep_COSMOS_green_Map.DR1.sci.cutout.fits 
+mips_24    = mips_24_GO3_sci_10.cutout.fits
+pacs_green = pep_COSMOS_green_Map.DR1.sci.cutout.fits
 pacs_red   = pep_COSMOS_red_Map.DR1.sci.cutout.fits
 spire_PSW  = cosmos-uvista-hipe12_itermap_10_iterations_6.0_arcsec_pixels_PSW.signal.cutout.fits
-spire_PMW  = cosmos-uvista-hipe12_itermap_10_iterations_6.0_arcsec_pixels_PMW.signal.cutout.fits 
+spire_PMW  = cosmos-uvista-hipe12_itermap_10_iterations_6.0_arcsec_pixels_PMW.signal.cutout.fits
 spire_PLW  = cosmos-uvista-hipe12_itermap_10_iterations_6.0_arcsec_pixels_PLW.signal.cutout.fits
-scuba_450  = map450_new_header.cutout.fits 
-scuba_850  = map850_new_header.cutout.fits  
-aztec      = cosmos_jcmt_kscott20100925_map.cutout.fits 
+scuba_450  = map450_new_header.cutout.fits
+scuba_850  = map850_new_header.cutout.fits
+aztec      = cosmos_jcmt_kscott20100925_map.cutout.fits
 
 [noise_file]
 ; If fits file contains noisemap in second extension, has same name as signal map
-mips_24    = mips_24_GO3_unc_10.cutout.fits 
+mips_24    = mips_24_GO3_unc_10.cutout.fits
 pacs_green = pep_COSMOS_green_Map.DR1.err.cutout.fits
 pacs_red   = pep_COSMOS_red_Map.DR1.err.cutout.fits
 spire_PSW  = cosmos-uvista-hipe12_itermap_10_iterations_6.0_arcsec_pixels_PSW.noise.cutout.fits
-spire_PMW  = cosmos-uvista-hipe12_itermap_10_iterations_6.0_arcsec_pixels_PMW.noise.cutout.fits 
+spire_PMW  = cosmos-uvista-hipe12_itermap_10_iterations_6.0_arcsec_pixels_PMW.noise.cutout.fits
 spire_PLW  = cosmos-uvista-hipe12_itermap_10_iterations_6.0_arcsec_pixels_PLW.noise.cutout.fits
 scuba_450  = map450_new_header_rms.cutout.fits
 scuba_850  = map850_new_header_rms.cutout.fits
-aztec      = cosmos_jcmt_kscott20100925_noise.cutout.fits 
+aztec      = cosmos_jcmt_kscott20100925_noise.cutout.fits
 
 [beams]
-;1- PSF file path+names, or effective FWHM 
-;2- Beam area in sr.  Should be 1.0 if maps are in Jy/beam, otherwise actual effective area if Jy/sr 
+;1- PSF file path+names, or effective FWHM
+;2- Beam area in sr.  Should be 1.0 if maps are in Jy/beam, otherwise actual effective area if Jy/sr
 mips_24    = 6.32 1.55e-09
 pacs_green = 6.7 1.0
 pacs_red   = 11.2 1.0
@@ -112,4 +119,4 @@ spire_PMW  = 0.9914
 spire_PLW  = 0.95615
 scuba_450  = 1e-3
 scuba_850  = 1e-3
-aztec      = 1.0 
+aztec      = 1.0
