updating example.cfg

--- a/examples/example.cfg
+++ b/examples/example.cfg
@@ -1,21 +1,21 @@
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Example parameter file for simstack code
-; Each line should have at most one parameter name and value
 ;
 ; Contact: Marco Viero (marco.viero@stanford.edu)
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [general]
 ;populations chooses how the catalog is split into groups with like-properties
+;classifying_scheme chooses how the catalog is split into groups with like-properties
+;Options are: sf-qt ; general ; uvj ; 
+classification_scheme = general 
 bootstrap       = False 0 2 ; True/False, initial number, number of iterations
 
 [populations]
 ;Name_of_sub-population = index, [conditions]
 ;Here conditions are: feature, greater than, less than, equal to
 ;False when one of those does not apply
-sf      = 1
-qt      = 0
-agn     = 2 F_ratio 40      False
-sb      = 3 lage    False   7.5
+sf      = 1 CLASS False False 1
+dead      = 0 CLASS False False 0
 
 [cosmology] ; Cosmology - Planck15
 omega_m = 0.3075
@@ -25,29 +25,20 @@ h       = 0.6774
 
 [io] ; Input/output
 
-output_folder           = ./output ; Output folder
-output_bootstrap_folder = ./output/bootstrap_fluxes/ ; Output folder for bootstraps
-flux_densities_filename = simstack_flux_densities ; Will be saved as [output_folder]/[flux_densities_filename].dat
-#boot_fluxes_filename    = simstack_bootstrap_flux_densities  ; Will be saved as [output_folder]/[boot_fluxes_filename].npy
-#shortname               = uVista_DR2_3color_tests
-#shortname               = uVista_Laigle_3color_z_slices_tests
-shortname               = uVista_Laigle_1color_z_slices_tests
+output_folder           = PICKLESPATH simstack/stacked_flux_densities/ 
+flux_densities_filename = simstack_flux_densities 
+shortname               = uVista__Laigle_v1.1__sf-qt__z_bins_in_slices_test
 
 [catalogs]
-;
-#catalog_path = /data/maps_cats_models/catalogs/UVISTA/DR2/
-#catalog_file = UVISTA_DR2_master_v2.1_USE.csv
-catalog_path = /data/maps_cats_models/catalogs/UVISTA/
+catalog_path = CATSPATH uVista/
 catalog_file = COSMOS2015_Laigle+_v1.1.csv
 
 [binning]
-optimal_binning = False ;5    ; True/False, (optional number of bins)
+optimal_binning = False ; True/False, (optional number of bins)
 bin_in_lookbackt= False
 all_z_at_once   = False
-redshift_minmax = False
-mass_minmax     = False
-redshift_nodes  = 0.5 1.0 1.5
-mass_nodes      = 9.0 9.5 10.0 10.5 11.0 12.0
+redshift_nodes  = 0.01 0.5 1.0 1.5 2.0 2.5 3.0 3.5 4.0 
+mass_nodes      = 8.5 9.0 9.5 10.0 10.5 11.0 12.0
 
 [maps_to_stack]
 ; True/False represents whether to stack them
@@ -63,15 +54,15 @@ aztec      = 1100.0 False
 
 [map_path]
 
-mips_24 = /data/simstack/data/cutouts/
-pacs_green = /data/simstack/data/cutouts/
-pacs_red = /data/simstack/data/cutouts/
-spire_PSW = /data/simstack/data/cutouts/
-spire_PMW = /data/simstack/data/cutouts/
-spire_PLW = /data/simstack/data/cutouts/
-scuba_450 = /data/simstack/data/cutouts/
-scuba_850 = /data/simstack/data/cutouts/
-aztec = /data/simstack/data/cutouts/
+mips_24 = MAPSPATH /data/cutouts/
+pacs_green = MAPSPATH /data/cutouts/
+pacs_red = MAPSPATH /data/cutouts/
+spire_PSW = MAPSPATH /data/cutouts/
+spire_PMW = MAPSPATH /data/cutouts/
+spire_PLW = MAPSPATH /data/cutouts/
+scuba_450 = MAPSPATH /data/cutouts/
+scuba_850 = MAPSPATH /data/cutouts/
+aztec = MAPSPATH /data/cutouts/
 
 [map_file]
 mips_24    = mips_24_GO3_sci_10.cutout.fits
@@ -81,7 +72,7 @@ spire_PSW  = cosmos-uvista-hipe12_itermap_10_iterations_6.0_arcsec_pixels_PSW.si
 spire_PMW  = cosmos-uvista-hipe12_itermap_10_iterations_6.0_arcsec_pixels_PMW.signal.cutout.fits
 spire_PLW  = cosmos-uvista-hipe12_itermap_10_iterations_6.0_arcsec_pixels_PLW.signal.cutout.fits
 scuba_450  = map450_new_header.cutout.fits
-scuba_850  = map850_new_header.cutout.fits
+scuba_850  = S2CLS_COSMOS_NMF_DR1_new_header.cutout.signal.fits 
 aztec      = cosmos_jcmt_kscott20100925_map.cutout.fits
 
 [noise_file]
@@ -93,27 +84,27 @@ spire_PSW  = cosmos-uvista-hipe12_itermap_10_iterations_6.0_arcsec_pixels_PSW.no
 spire_PMW  = cosmos-uvista-hipe12_itermap_10_iterations_6.0_arcsec_pixels_PMW.noise.cutout.fits
 spire_PLW  = cosmos-uvista-hipe12_itermap_10_iterations_6.0_arcsec_pixels_PLW.noise.cutout.fits
 scuba_450  = map450_new_header_rms.cutout.fits
-scuba_850  = map850_new_header_rms.cutout.fits
+scuba_850  = S2CLS_COSMOS_NMF_DR1_new_header.cutout.noise.fits
 aztec      = cosmos_jcmt_kscott20100925_noise.cutout.fits
 
 [beams]
 ;1- PSF file path+names, or effective FWHM
 ;2- Beam area in sr.  Should be 1.0 if maps are in Jy/beam, otherwise actual effective area if Jy/sr
 mips_24    = 6.32 1.55e-09
-pacs_green = 6.7 1.0
-pacs_red   = 11.2 1.0
+pacs_green = 6.7 2.0271e-09 ; MJy/sr to Jy/beam
+pacs_red   = 11.2 4.6398e-09 ; MJy/sr to Jy/beam 
 spire_PSW  = 17.6 1.0
 spire_PMW  = 23.9 1.0
 spire_PLW  = 35.2 1.0
 scuba_450  = 7.8 1.0
-scuba_850  = 14.5 1.0
+scuba_850  = 12.1 1.0
 aztec      = 18.0 1.0
 
 [color_correction]
 ; See Viero et al. 2013 for explaination
 mips_24    = 1.25
-pacs_green = 23.58
-pacs_red   = 23.82
+pacs_green = 1.0 
+pacs_red   = 1.0
 spire_PSW  = 1.018
 spire_PMW  = 0.9914
 spire_PLW  = 0.95615
