--- a/examples/example.cfg
+++ b/examples/example.cfg
@@ -24,7 +24,10 @@ omega_k = 0.
 h       = 0.6774
 
 [io] ; Input/output
-
+;Edit output_folder to be the folder containing the directories: 
+; - simstack_fluxes 
+; - bootstrapped_fluxes
+;If they don't exist the code will create them!
 output_folder           = PICKLESPATH simstack/stacked_flux_densities/ 
 shortname               = uVista__Laigle_v1.1__sf-qt__z_bins_in_slices_test
 
@@ -33,9 +36,10 @@ catalog_path = CATSPATH uVista/
 catalog_file = COSMOS2015_Laigle+_v1.1.csv
 
 [binning]
-optimal_binning = False ; True/False, (optional number of bins)
-bin_in_lookbackt= False
+optimal_binning = False ; Not yet working 
+bin_in_lookbackt= False ; Not yet working from command line, and requires NPpredict be installed
 all_z_at_once   = False
+;If binning in lookback time, redshift_nodes should be in Gyr from present day.
 redshift_nodes  = 0.01 0.5 1.0 1.5 2.0 2.5 3.0 3.5 4.0 
 mass_nodes      = 8.5 9.0 9.5 10.0 10.5 11.0 12.0
 
@@ -107,6 +111,6 @@ pacs_red   = 1.0
 spire_PSW  = 1.018
 spire_PMW  = 0.9914
 spire_PLW  = 0.95615
-scuba_450  = 1e-3
-scuba_850  = 1e-3
+scuba_450  = 1e-3 ; Because SCUBA-2 is in MJy/beam
+scuba_850  = 1e-3 ; Because SCUBA-2 is in MJy/beam
 aztec      = 1.0
