--- a/examples/example.cfg
+++ b/examples/example.cfg
@@ -56,7 +56,6 @@ scuba_850  =  850.0 False
 aztec      = 1100.0 False
 
 [map_path]
-
 mips_24 = MAPSPATH /data/cutouts/
 pacs_green = MAPSPATH /data/cutouts/
 pacs_red = MAPSPATH /data/cutouts/
@@ -68,6 +67,7 @@ scuba_850 = MAPSPATH /data/cutouts/
 aztec = MAPSPATH /data/cutouts/
 
 [map_file]
+; Maps need to be in Jy/beam.  If they are not, use second element in [beams] below to convert them.  
 mips_24    = mips_24_GO3_sci_10.cutout.fits
 pacs_green = pep_COSMOS_green_Map.DR1.sci.cutout.fits
 pacs_red   = pep_COSMOS_red_Map.DR1.sci.cutout.fits
