--- a/examples/example.cfg
+++ b/examples/example.cfg
@@ -14,8 +14,8 @@ bootstrap       = False 0 2 ; True/False, initial number, number of iterations
 ;Name_of_sub-population = index, [conditions]
 ;Here conditions are: feature, greater than, less than, equal to
 ;False when one of those does not apply
-sf      = 1 CLASS False False 1
-dead      = 0 CLASS False False 0
+sf   = 1 CLASS False False 1
+dead = 0 CLASS False False 0
 
 [cosmology] ; Cosmology - Planck15
 omega_m = 0.3075
@@ -24,7 +24,7 @@ omega_k = 0.
 h       = 0.6774
 
 [io] ; Input/output
-;Edit output_folder to be the folder containing the directories: 
+;output_folder will contain the directories: 
 ; - simstack_fluxes 
 ; - bootstrapped_fluxes
 ;If they don't exist the code will create them!
