put flux_densities_filename = simstack_flux_densities back

--- a/examples/example.cfg
+++ b/examples/example.cfg
@@ -29,6 +29,7 @@ h       = 0.6774
 ; - bootstrapped_fluxes
 ;If they don't exist the code will create them!
 output_folder           = PICKLESPATH simstack/stacked_flux_densities/ 
+flux_densities_filename = simstack_flux_densities
 shortname               = uVista__Laigle_v1.1__sf-qt__z_bins_in_slices_test
 
 [catalogs]
