added catalog specific names for z m ra dec

--- a/examples/example.cfg
+++ b/examples/example.cfg
@@ -9,6 +9,11 @@
 ;Options are: sf-qt ; general ; uvj ; 
 classification_scheme = general 
 bootstrap       = False 0 2 ; True/False, initial number, number of iterations
+;Catalog specific names for redshift, stellar mass, RA, and DEC
+zkey = PHOTOZ
+mkey = MASS_MED
+ra_key = ALPHA_J2000
+dec_key = DELTA_J2000
 
 [populations]
 ;Name_of_sub-population = index, [conditions]
