--- a/examples/example.cfg
+++ b/examples/example.cfg
@@ -39,7 +39,7 @@ shortname               = uVista__Laigle_v1.1__sf-qt__z_bins_in_slices_test
 
 [catalogs]
 catalog_path = CATSPATH uVista/
-catalog_file = COSMOS2015_Laigle+_v1.1.csv
+catalog_file = COSMOS2015_Laigle+_Simplified_v1.1.csv 
 
 [binning]
 optimal_binning = False ; Not yet working 
@@ -59,7 +59,6 @@ spire_PMW  =  350.0 False
 spire_PLW  =  500.0 False
 scuba_450  =  450.0 False
 scuba_850  =  850.0 False
-aztec      = 1100.0 False
 
 [map_path]
 mips_24 = MAPSPATH /data/cutouts/
@@ -70,7 +69,6 @@ spire_PMW = MAPSPATH /data/cutouts/
 spire_PLW = MAPSPATH /data/cutouts/
 scuba_450 = MAPSPATH /data/cutouts/
 scuba_850 = MAPSPATH /data/cutouts/
-aztec = MAPSPATH /data/cutouts/
 
 [map_file]
 ; Maps need to be in Jy/beam.  If they are not, use second element in [beams] below to convert them.  
@@ -82,7 +80,6 @@ spire_PMW  = cosmos-uvista-hipe12_itermap_10_iterations_6.0_arcsec_pixels_PMW.si
 spire_PLW  = cosmos-uvista-hipe12_itermap_10_iterations_6.0_arcsec_pixels_PLW.signal.cutout.fits
 scuba_450  = map450_new_header.cutout.fits
 scuba_850  = S2CLS_COSMOS_NMF_DR1_new_header.cutout.signal.fits 
-aztec      = cosmos_jcmt_kscott20100925_map.cutout.fits
 
 [noise_file]
 ; If fits file contains noisemap in second extension, has same name as signal map
@@ -94,7 +91,6 @@ spire_PMW  = cosmos-uvista-hipe12_itermap_10_iterations_6.0_arcsec_pixels_PMW.no
 spire_PLW  = cosmos-uvista-hipe12_itermap_10_iterations_6.0_arcsec_pixels_PLW.noise.cutout.fits
 scuba_450  = map450_new_header_rms.cutout.fits
 scuba_850  = S2CLS_COSMOS_NMF_DR1_new_header.cutout.noise.fits
-aztec      = cosmos_jcmt_kscott20100925_noise.cutout.fits
 
 [beams]
 ;1- PSF file path+names, or effective FWHM
@@ -107,7 +103,6 @@ spire_PMW  = 23.9 1.0
 spire_PLW  = 35.2 1.0
 scuba_450  = 7.8 1.0
 scuba_850  = 12.1 1.0
-aztec      = 18.0 1.0
 
 [color_correction]
 ; See Viero et al. 2013 for explaination
@@ -119,4 +114,3 @@ spire_PMW  = 0.9914
 spire_PLW  = 0.95615
 scuba_450  = 1e-3 ; Because SCUBA-2 is in MJy/beam
 scuba_850  = 1e-3 ; Because SCUBA-2 is in MJy/beam
-aztec      = 1.0
